@@ -1,3 +1,6 @@
+2019-11-27  Franz Holzinger  <franz@ttproducts.de>
+    * compatibility with TYPO3 10: Add the file Configuration/Extbase/Persistence/Classes.php.
+
 2019-02-21  Franz Holzinger  <franz@ttproducts.de>
     * compatibility for TYPO3 9.5
 
